<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:id="@+id/cleaningMainLayout">


    <Button
        android:id="@+id/btCleaningRooms"
        style="@style/MenuButtonStyle"
        android:text="@string/cleaning_first_room"
        android:background="@color/red_zero"/>

    <Button
        android:id="@+id/btCleaningBathrooms"
        style="@style/MenuButtonStyle"
        android:text="@string/cleaning_first_bathroom"
        android:background="@color/red_one"/>

    <Button
        android:id="@+id/btCleaningClothes"
        style="@style/MenuButtonStyle"
        android:text="@string/cleaning_first_clothes"
        android:background="@color/red_two"/>

    <Button
        android:id="@+id/btCleaningParty"
        style="@style/MenuButtonStyle"
        android:text="@string/cleaning_first_party"
        android:background="@color/red_three"/>

    <Button
        android:id="@+id/btCleaningKitchen"
        style="@style/MenuButtonStyle"
        android:text="@string/cleaning_first_kitchen"
        android:background="@color/red_four"/>



</LinearLayout>