<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btZeroCleaning"
        style="@style/MenuButtonStyle"
        android:background="@color/red_zero"
        android:text="@string/zero_cleaning"
        />

    <Button
        android:id="@+id/btZeroMaintenance"
        style="@style/MenuButtonStyle"
        android:background="@color/blue_zero"
        android:text="@string/zero_maintenance"
        />

    <Button
        android:id="@+id/btZeroOther"
        style="@style/MenuButtonStyle"
        android:background="@color/green_zero"
        android:text="@string/zero_others"
        />


</LinearLayout>